...
                ),
              ),
            ),
            const Spacer(),
            const Center(
              child: Text(
                'Hi! my name is David',
                style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
              ),
            ),
            const Spacer(),
          ],
        ),
...
